# CPUForge

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  License notes.txt  README.md  vcpkg-configuration.json  vcpkg.json
_img/: test
src/: AppContext.h  CPUForge.cpp  CPUForge.h  _types.h  enumAppCommands.h
src/ISA/: Architecture.h  Instruction.h
src/components/: ComponentContext.cpp  ComponentContext.h  _IAppComponent.h
src/components/isa/: IsaDocumentStore.h  IsaEditor.h  IsaEditorState.h
src/core/: AppComponentRegistry.cpp  AppComponentRegistry.h  Architecture.h  IsaContext.h  Register.h  enumIsaDef.h
src/core/isa/: Architecture.h  Context.h  Instruction.h  IsaAddress.h  IsaArchitecture.h  IsaContext.h  IsaDefinition.h  IsaInstruction.h  IsaMemory.h  IsaRegister.h  Register.h  enumIsaDef.h
src/project/: FileHandler.h  Project.h  ProjectData.h  ProjectManager.cpp  ProjectManager.h  WorkspaceManager.cpp  WorkspaceManager.h  enumProjectDef.h
src/queue/: AppCommandDispatcher.cpp  AppCommandDispatcher.h  AppCommandQueue.cpp  AppCommandQueue.h
src/ux/: KeyHandler.h  UI.cpp  UI.h  WindowManager.cpp  WindowManager.h  _UxComponent.h  _UxInterface.h
src/ux/core/: ModalNewFile.h  ModalNewFolder.h  ModalNewProject.h  ModalOpenProject.h
src/ux/menubar/: ImGuiMenuHandler.cpp  ImGuiMenuHandler.h  MacMenu.mm  MacOsNative.cpp  MacOsNative.h  MenuData.h  WindowMenuData.h
src/ux/modules/: ViewConsole.h  ViewIsaEditor.h  ViewProjectTree.h
testproj/: project.json
testproj/coer1/: project.cpuforge.json
testproj/coer1/isa/: core1solo.isa
testproj/new project/: project.cpuforge.json
testproj/new project/isa/: simple9.isa
testproj/simple12/: project.cpuforge.json
testproj/simple16/: project.cpuforge.json
testproj/simple17/: project.cpuforge.json
testproj/simple5/: project.cpuforge.json
testproj/simple8/: project.cpuforge.json
testproj/simple9/: project.cpuforge.json
testproj/simple9/isa/: core1.isa
testproj/simple99/: project.cpuforge.json
testproj/simple99/isa/: core1.isa  core2duo.isa  new file.isa
testproj/test1solo/: project.cpuforge.json
testproj/test1solo/isa/: core1.isa
